@@ -135,6 +135,9 @@ class KSSRegistryTool(BaseRegistryTool):
 
         Updates the whole sequence. For editing and reordering.
         """
+        if REQUEST and not REQUEST.form:
+            REQUEST.RESPONSE.redirect(self.manage_workspace_url)
+            return
         debugmode = REQUEST.get('debugmode', False)
         self.setDebugMode(debugmode)
         records = REQUEST.get('kineticstylesheets', [])
